Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8621

jom: conditions inside assignment are not handled correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.9.0-beta1
    • Qt Creator 2.7.0
    • Jom
    • None
    • a78974f95b1e4851728b8f6a47715022f11f9059

      Wireshark is full of surprises

      TEST9=foo \
      bar \
      !IF 1
      baz \
      !ELSE
      boo \
      hoo
      !ENDIF

      Tests on https://codereview.qt-project.org/45573

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes