Fix line continuations for preprocessor directives

Line continuations in preprocessor directives are now handled correctly
such that assignments like the following are possible:

VAR=foo\
!IF 1
bar\
!EL\
SE
baz\
!ENDIF
zap

which evaluates to

VAR=foo bar zap

Task-number: QTCREATORBUG-8621
Task-number: QTCREATORBUG-18001
Change-Id: I3f86c6e3b13cbc04451fcfb267c5c43946b8e85c
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>